kubernetes/sailing-test-master-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sailing-test-master
  labels:
    app: test
    role: sailing-master 
    environment: sailing
spec:
  containers:
  - name: sailing
    image: donaldduck70/sapsailing:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8888
      name: http-port
    - containerPort: 14888
      name: telnet-port
    resources:
      requests:
        memory: "6Gi"
        cpu: "250m"
      limits:
        memory: "12Gi"
        cpu: "500m"
    livenessProbe:
      httpGet:
        path: /
        port: http-port
      initialDelaySeconds: 10
      periodSeconds: 30
    readinessProbe:
      exec:
        command:
        - ./status
      initialDelaySeconds: 10
      periodSeconds: 30
  imagePullSecrets:
  - name: dockerhubsecret
