kubernetes/sailing-test-replicaset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sailing-test-replicaset
  labels:
    app: test
    role: sailing-deployment
    environment: sailing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
      role: sailing-replica
      environment: sailing
  template:
    metadata:
      labels:
        app: test
        role: sailing-replica
        environment: sailing
    spec:
    # AntiAffinity between replicas and associated master
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 80
              podAffinityTerm:
                labelSelector:
                    matchExpressions:
                      - key: app
                        operator: In
                        values:
                          - test
                      - key: environment
                        operator: In
                        values:
                          - sailing
                      - key: role
                        operator: In
                        values:
                          - sailing-replica
                topologyKey: kubernetes.io/hostname
            - weight: 40
              podAffinityTerm:
                labelSelector:
                    matchExpressions:
                      - key: app
                        operator: In
                        values:
                          - test
                      - key: environment
                        operator: In
                        values:
                          - sailing
                      - key: role
                        operator: In
                        values:
                          - sailing-master
                topologyKey: kubernetes.io/hostname
      containers:
      - name: sailing
        image: donaldduck70/sapsailing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
          name: http-port
        - containerPort: 14888
          name: telnet-port
        resources:
          requests:
            memory: "6Gi"
            cpu: "500m"
          limits:
            memory: "12Gi"
            cpu: "2"
        livenessProbe:
          httpGet:
            path: /
            port: http-port
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - ./status
          initialDelaySeconds: 10
          periodSeconds: 30
      imagePullSecrets:
      - name: dockerhubsecret
