kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: nginx 
  ports:
    - port: 443
      targetPort: http-port
