kubernetes/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.aws.alstolten.de
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: main-port
